--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -19,7 +19,13 @@ jobs:
            - name: checkout repository
              uses: actions/checkout@v4
 
-
+           - name: Azure Login
+             uses: azure/login@v1
+             with:
+                client-id: ${{ secrets.AZURE_CLIENT_ID }}
+                tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+                subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+                client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
            - name: set up terraform
              uses: hashicorp/setup-terraform@v3
              with:
