--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -26,6 +26,7 @@ jobs:
                 tenant-id: ${{ secrets.AZURE_TENANT_ID }}
                 subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
                 client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+                auth-type: SERVICE_PRINCIPAL
            - name: set up terraform
              uses: hashicorp/setup-terraform@v3
              with:
